fix(status): added letter-spacing (#319)
* fix(status): added letter-spacing

* Create short-forks-wash.md

--- a/packages/status/src/index.module.css
+++ b/packages/status/src/index.module.css
@@ -12,6 +12,7 @@
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
+    letter-spacing: 0.5px;
 
     &:empty {
         padding: 0;
